port maze improvements
Ported @mikinakabayashi 's maze generation improvement to 1.21.1
Removed ChunkMapAccessor as it was unused
Remove logger that spammed the console while generating