@@ -1,6 +1,5 @@
 package com.leo.mazerooms.world;
 
-import com.leo.mazerooms.MazeRooms;
 import com.leo.mazerooms.config.ServerConfig;
 import com.leo.mazerooms.data.MazeData;
 import com.leo.mazerooms.data.WallDirection;
@@ -14,7 +13,6 @@ import net.minecraft.util.RandomSource;
 import net.minecraft.world.level.ChunkPos;
 import net.minecraft.world.level.block.Rotation;
 import net.minecraft.world.level.chunk.ChunkAccess;
-import net.minecraft.world.level.chunk.LevelChunk;
 import net.minecraft.world.level.levelgen.structure.templatesystem.StructurePlaceSettings;
 import net.minecraft.world.level.levelgen.structure.templatesystem.StructureTemplate;
 import net.minecraft.world.level.levelgen.structure.templatesystem.StructureTemplateManager;
@@ -22,6 +20,8 @@ import net.minecraft.world.level.levelgen.structure.templatesystem.StructureTemp
 import java.util.*;
 
 public class RoomHandler {
+
+    private static int wallsCarryOver = 0;
 
     public static void handlePlayerChunkChange(ServerPlayer player, ServerLevel sLevel) {
         int maxDistance = ServerConfig.MAX_CHUNK_DISTANCE.get();
@@ -37,9 +37,12 @@ public class RoomHandler {
             }
         }
 
+        chunksToCheck.sort((p, q) -> (Math.abs(p.x - playerPos.x) + Math.abs(p.z - playerPos.z))
+                - (Math.abs(q.x - playerPos.x) + Math.abs(q.z - playerPos.z)));
+
         for (ChunkPos pos : chunksToCheck) {
             if (!processedChunks.contains(pos)) {
-                LevelChunk chunk = sLevel.getChunkSource().getChunk(pos.x, pos.z, false);
+                ChunkAccess chunk = sLevel.getChunkSource().getChunk(pos.x, pos.z, false);
                 if (chunk != null) {
                     handleChunk(chunk, sLevel, player);
                     processedChunks.add(pos);
@@ -74,11 +77,11 @@ public class RoomHandler {
         }
 
         while (!chunks.isEmpty()) {
-            ChunkAccess levelChunk = chunks.removeLast();
-            if (visitedChunks.contains(levelChunk.getPos())) continue;
+            ChunkAccess ChunkAccess = chunks.remove(chunks.size() - 1);
+            if (visitedChunks.contains(ChunkAccess.getPos())) continue;
 
-            visitedChunks.add(levelChunk.getPos());
-            handleChunk(levelChunk, sLevel, player);
+            visitedChunks.add(ChunkAccess.getPos());
+            handleChunk(ChunkAccess, sLevel, player);
         }
     }
 
@@ -101,14 +104,13 @@ public class RoomHandler {
             data = new MazeData(true, ListUtil.of(WallDirection.values()));
             CommonUtils.saveData(chunk, data);
             placeChunkRoom(chunk, level, CommonUtils.create(dimensionName + "/room_3_0"));
-            handleFutureChunks(chunk, level, player);
+            // handleFutureChunks(chunk, level, player);
             return;
         }
 
         List<WallDirection> walls = new ArrayList<>();
         MazeData[] nearbyData = MazeData.getNearbyChunkData(chunk, level);
-
-        int addedWalls = 0;
+        List<WallDirection> possibleWalls = ListUtil.of(WallDirection.values());
 
         // Synchronize connections with neighbors
         for (int i = 0; i < nearbyData.length; i++) {
@@ -116,32 +118,24 @@ public class RoomHandler {
             if (sideData == null || !sideData.generated()) continue;
 
             WallDirection dir = WallDirection.fromIndex(i);
-            WallDirection opposite = dir.opposite();
 
-            if (sideData.hasDirection(opposite)) {
+            if (sideData.hasOpposite(dir)) {
                 if (!walls.contains(dir)) {
                     walls.add(dir);
-                    addedWalls++;
                 }
             }
 
-            // Ensure the neighbor's data reflects the connection back to this chunk
-            if (!sideData.hasDirection(opposite)) {
-                sideData.walls().add(opposite);
-                CommonUtils.saveData(MazeData.getChunkFromDirection(chunk, dir, level), sideData);
-            }
+            possibleWalls.remove(dir);
         }
 
         // Add additional random walls
-        int numberOfPaths = getWeightedRandom(new int[]{0, 1, 2, 3}, new double[]{0, 0.0, 0.75, 0.25}, level.random);
+        int numberOfPaths = getWeightedRandom(new int[] { 1, 2, 3, 4 }, new double[] { 0.05, 0.75, 0.15, 0.05 },
+                level.random);
 
-        // Determine additional random connections
-        List<WallDirection> possibleWalls = ListUtil.of(WallDirection.values());
-        possibleWalls.removeAll(walls); // Remove already connected walls
+        numberOfPaths += wallsCarryOver; // TODO: Evaluate thread safety
+        wallsCarryOver = 0;
 
-        for (int currentWallIndex = 0; currentWallIndex < numberOfPaths - addedWalls; currentWallIndex++) {
-            if (possibleWalls.isEmpty()) break; // All walls are already open
-
+        while (numberOfPaths > walls.size() && !possibleWalls.isEmpty()) {
             // Randomize direction
             int wallToOpen = level.random.nextInt(possibleWalls.size());
             WallDirection wallDir = possibleWalls.get(wallToOpen);
@@ -149,25 +143,25 @@ public class RoomHandler {
             // Open the wall and remove it from the available ones
             walls.add(wallDir);
             possibleWalls.remove(wallDir);
+        }
 
-            // Also ensure the neighboring chunk reflects this connection
-            ChunkAccess neighborChunk = MazeData.getChunkFromDirection(chunk, wallDir, level);
-            if (neighborChunk != null) {
-                MazeData neighborData = MazeData.getOrCreateData(neighborChunk);
-                if (!neighborData.hasDirection(wallDir.opposite())) {
-                    neighborData.walls().add(wallDir.opposite());
-                    CommonUtils.saveData(neighborChunk, neighborData);
-                }
-            }
+        wallsCarryOver = Math.max(0, numberOfPaths - walls.size());
+
+        // Avoid generating rooms without connections.
+        // (NOT actually connect, it avoids errors caused by the absence of the
+        // corresponding structure file.)
+        if (walls.size() == 0) {
+            int wallToOpen = level.random.nextInt(4);
+            WallDirection wallDir = WallDirection.values()[wallToOpen];
+            walls.add(wallDir);
         }
 
         // Save the updated maze data for this chunk
         data = new MazeData(true, walls);
         CommonUtils.saveData(chunk, data);
 
-        MazeRooms.LOGGER.info("Chunk: {}, Maze Data: {}", chunk.getPos(), MazeData.getOrCreateData(chunk));
         handleChunkRoom(chunk, level);
-        handleFutureChunks(chunk, level, player);
+        // handleFutureChunks(chunk, level, player);
     }
 
     public static void placeChunkRoom(ChunkAccess chunk, ServerLevel level, ResourceLocation room) {
@@ -201,7 +195,7 @@ public class RoomHandler {
     public static Rotation getRoomRotation(MazeData data) {
         if(!data.generated()) return Rotation.NONE;
 
-        WallDirection start = data.walls().getFirst().opposite();
+        WallDirection start = data.walls().get(0).opposite();
         int exitCount = data.getExitCount();
 
         //Dead ends
@@ -209,9 +203,9 @@ public class RoomHandler {
             return determineRotation(start);
         }
 
-        if(exitCount == 3) {
+        if (exitCount == 3) {
             int count = data.walls().stream().map(Enum::ordinal).mapToInt(Integer::intValue).sum();
-            return determineRotation(WallDirection.fromIndex(count - 5));
+            return determineRotation(WallDirection.fromIndex(5 - count));
         }
 
         // Hallways / Corners
